OpenELIS/version2/UI/trunk/src/org/openelis/ui/resources/css/button.css
.Button {
	padding: 2px;
	border:1px solid #7293be;
	border-radius : 4px;
	font-family:inherit;
    font-size:inherit;
    color:inherit;
    text-shadow: 0 1px white;
    background:white;
    display : flex;
    height : 18px;
}

 .Button > div{

 }

 .Button:hover{
     cursor:pointer;
     box-shadow: 0 1px 3px #FFFFFF inset, 0 -9px #b4c9e2 inset;
	 background:#e7f0f7;
 }


@if user.agent gecko1_8 {
	.Button:hover{
	}
}@elif user.agent ie6 ie8 ie9 {
	.Button:hover {
	}	
}@elif user.agent safari {
	.Button:hover {

	}
}

@if user.agent gecko1_8 {
	.Button, .Disabled:hover {
	    background:white;
    box-shadow: 0 1px 3px #FFFFFF inset, 0 -9px #dddfe2 inset;
		}
}@elif user.agent ie6 ie8 ie9 {
	.Button, .Disabled:hover {
	    background:white;
	    box-shadow: 0 1px 3px #FFFFFF inset, 0 -9px #dddfe2 inset;
	}
}@elif user.agent safari {
	.Button, .Disabled:hover {
	    background:white;
    box-shadow: 0 1px 3px #FFFFFF inset, 0 -9px #dddfe2 inset;}
}

.Focus {
	cursor:pointer;
     box-shadow: 0 1px 3px #FFFFFF inset, 0 -9px #b4c9e2 inset;
	 background:#e7f0f7;
}
 .Pressed{}
/*
@if user.agent gecko1_8 {
	.Pressed {
		background-image:-moz-linear-gradient(top,#8dc0f5,#c9ddf6);
	}
}@elif user.agent ie6 ie8 ie9 {
	.Pressed {
		background-image:-ms-linear-gradient(top,#8dc0f5,#c9ddf6);
	}
}@elif user.agent safari {
	.Pressed {
		background-image:-webkit-linear-gradient(top,#8dc0f5,#c9ddf6);
	}
} */

.Disabled, .Disabled:hover{
	color:gray;
	border-color:gray;
	cursor:default;
}

